fixed layout issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
 .card {
   padding: 2em;
 }
@@ -13,11 +7,10 @@
 }
 
 .tiptap {
-  min-height: 70vh;
-  width: 80%;
+  min-height: 75vh;
+  width: 70vw;
   padding: 20px 20px 20px 30px;
-  margin: 20px 50px 20px;
-  @apply drop-shadow border bg-background  shadow-lg border-slate-400
+  @apply drop-shadow border bg-background  shadow-lg border-slate-400;
 }
 
 .tiptap > * {
